--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ img {
 .section-header .line1 {
     height: 2px;
     width: 200px;
-    background: #E15F41;
+    background: #006400	;
     margin: auto;
 }
 
@@ -139,7 +139,7 @@ img {
 
 .loader:before, .loader:after {
     content: '';
-    border: 1em solid #E15F41;
+    border: 1em solid #006400;
     border-radius: 50%;
     width: inherit;
     height: inherit;
@@ -194,11 +194,11 @@ img {
 }
 
 .sticky_navigation .navbar-brand, .sticky_navigation .navbar-brand span {
-    color: #E15F41;
+    color: #006400;
 }
 
 .sticky_navigation .navbar-brand:hover, .sticky_navigation .navbar-brand:focus, .sticky_navigation .navbar-brand span {
-    color: #E15F41;
+    color: #006400;
 }
 
 .sticky_navigation .nav li a {
@@ -206,7 +206,7 @@ img {
 }
 
 .sticky_navigation .nav li.active a{
-    color: #E15F41;
+    color: #006400;
 }
 
 .sticky_navigation .navbar-brand:hover{
@@ -379,7 +379,7 @@ canvas{
 }
 
 .banner-btn a {
-    background-color: #E15F41;
+    background-color: #006400;
     color: #ffffff;
     padding: 10px 35px;
     display: inline-block;
@@ -409,13 +409,13 @@ canvas{
     padding: 2% 5%;
 }
 .about-right h1 {
-    border-left: 3px solid #E15F41;
+    border-left: 3px solid #006400;
     padding-left: 15px;
     font-size: 30px;
     line-height:40px;
 }
 .text-primary {
-    color: #E15F41;
+    color: #006400;
 }
 .socials {
     margin-top: 5%;
@@ -500,7 +500,7 @@ canvas{
     height: 25px;
     right: -17px;
     background-color: white;
-    border: 4px solid #E15F41;
+    border: 4px solid #006400;
     top: 20px;
     border-radius: 50%;
     z-index: 1;
@@ -545,7 +545,7 @@ canvas{
 
 #resume h3 {
     font-size: 15px;
-    color: #E15F41;
+    color: #006400;
     margin: 10px auto;
     text-transform: uppercase;
 }
@@ -586,13 +586,13 @@ canvas{
 }
 
 .services-icon {
-    border: 1px solid #E15F41;
+    border: 1px solid #006400;
     display: inline-block;
     width: 80px;
     height: 80px;
     border-radius: 50%;
     padding: 20px;
-    background-color: #E15F41;
+    background-color: #006400;
 }
 
 .single-services {
@@ -612,15 +612,15 @@ canvas{
 .single-services:hover .services-icon{
     background-color: #ffffff;
     transition: ease .3s;
-    border-color: #E15F41;
+    border-color: #006400;
 }
 
 .single-services:hover .services-icon i{
-    color: #E15F41;
+    color: #006400;
 }
 
 .single-services:hover{
-    background-color: #E15F41;
+    background-color: #006400;
     -webkit-transition: .9s;
     -moz-transition: .9s ;
     -ms-transition: .9s ;
@@ -761,8 +761,8 @@ canvas{
 
 .single-testimonial {
     margin: 0 49px 29px;
-    border-right: 5px solid #E15F41;
-    border-left: 5px solid #E15F41;
+    border-right: 5px solid #006400;
+    border-left: 5px solid #006400;
     padding: 40px 30px 40px;
     position: relative;
     background-color: #eeeeee;
@@ -772,7 +772,7 @@ canvas{
 
 .single-testimonial::before {
     content: "";
-    background-color: #E15F41;
+    background-color: #006400;
     position: absolute;
     top: 0;
     left: 0;
@@ -782,7 +782,7 @@ canvas{
 
 .single-testimonial::after {
     content: "";
-    background-color: #E15F41;
+    background-color: #006400;
     right: 0;
     width: 50%;
     height: 5px;
@@ -834,7 +834,7 @@ canvas{
 }
 
 .owl-dot.active {
-    background-color: #E15F41 !important;
+    background-color: #006400 !important;
 }
 
 /*------------ Testimonial area ends ---------*/
@@ -863,7 +863,7 @@ canvas{
     color: #fff;
     padding: 10px 20px;
     text-transform: uppercase;
-    background: #E15F41;
+    background: #006400;
     margin-top: 20px;
     border-radius: 30px;
     margin-left: 5px;
@@ -897,7 +897,7 @@ canvas{
 }
 
 .btn.btn-send {
-    background-color: #E15F41;
+    background-color: #006400;
     color: #ffffff;
     padding: 10px 35px;
     display: inline-block;
@@ -978,7 +978,7 @@ canvas{
     padding: 30px 0;
 }
 .footer-area a{
-    color: #E15F41;
+    color: #006400;
 }
 
 /*--------------- Footer area ends -------------*/
