--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,9 @@
 /* =================================================
 
-Template Name:  Natasha - Personal Responsive Bootstrap Template
-Author: MouriTheme
+Template Name:  Drake Paulsen - Personal Responsive Bootstrap Template
+Author: Drake Paulsen
 Version: 1.0
-Design and Developed by: MouriTheme
+Design and Developed by: Drake Paulsen
 
 NB: This is the responsive stylesheet of this theme.
 
@@ -112,7 +112,7 @@ NB: This is the responsive stylesheet of this theme.
     }
 
     .navbar-toggle .icon-bar {
-        background: #E15F41;
+        background: #006400;
     }
 
     .navbar-nav {
@@ -269,7 +269,7 @@ NB: This is the responsive stylesheet of this theme.
     }
 
     .navbar-toggle .icon-bar {
-        background: #E15F41;
+        background: #006400;
     }
 
     .mouse-icon {
