--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /* =================================================
 
-Template Name:  Natasha - One page portfolio template
-Author: MouriTheme
+Template Name:  Drake Paulsen - One page portfolio template
+Author: Drake Paulsen
 Version: 1.0
-Design and Developed by: MouriTheme
+Design and Developed by: Drake Paulsen
 
 NB: This is the main stylesheet of this theme.
 
