--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ canvas{
 
 .banner-btn a {
     background-color: #006400;
-    color: #ffffff;
+    color: ;
     padding: 10px 35px;
     display: inline-block;
     margin-top: 25px;
